リンクの設置 #5

--- a/config/locales/views/views.yml
+++ b/config/locales/views/views.yml
@@ -15,3 +15,7 @@ ja:
     sessions:
       new:
         submit: 'ログイン'
+    top:
+      dashboard:
+        title: 'ダッシュボード'
+        admin_staff_members: '職員管理'
