管理者トップページ更新

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -16,6 +16,8 @@ ja:
       new:
         submit: 'ログイン'
     top:
+      index:
+        title: '管理者トップページ'
       dashboard:
         title: 'ダッシュボード'
         admin_staff_members: '職員管理'
