--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -34,6 +34,7 @@ ja:
       dashboard:
         title: 'ダッシュボード'
         admin_staff_members: '職員管理'
+        admin_staff_events: '職員のログイン・ログアウト記録'
     staff_members:
       index:
         title: '職員管理'
@@ -46,6 +47,7 @@ ja:
         suspended: '停止フラグ'
         action: 'アクション'
         edit: '編集'
+        events: 'Events'
         delete: '削除'
         confirm: '本当に削除しますか?'
       new:
