顧客アカウントの詳細表示 #13

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -28,6 +28,8 @@ ja:
         edit: '編集'
         delete: '削除'
         confirm: '本当に削除しますか?'
+      show:
+        title: '顧客詳細情報'
     accounts:
       show:
         title: 'アカウント情報'
