--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -90,6 +90,15 @@ ja:
                 after_or_equal_to: には2000年1月1日以降の日付を指定してください。
                 before: には1年後の日付より前の日付を指定してください。
                 after: には開始日より後の日付を指定してください。
+                after: には開始日より後の日付を指定してください。
+
+        customer:
+          attributes:
+            email:
+              taken: が他の顧客と重複しています
+              birthday:
+                after_or_equal_to: には1900年1月1日以降の日時を指定してください。
+                before: が未来の日付です。
 
   activemodel:
     models:
