顧客詳細ページへの電話番号の表示 #15

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -39,11 +39,15 @@ ja:
         gender: '性別'
         create_at: '登録日時'
         update_at: '更新日時'
+        personal_phones_1: '個人電話番号（１）'
+        personal_phones_2: '個人電話番号（２）'
         home_address_postal_code: '郵便番号'
         home_address_prefecture: '都道府県'
         home_address_city: '市区町村'
         home_address_address1: '町域、番地等'
         home_address_address2: '建物名、部屋番号'
+        home_address_phones_1: '自宅電話番号（１）'
+        home_address_phones_2: '自宅電話番号（２）'
         work_address_company_name: '会社名'
         work_address_division_name: '部署名'
         work_address_postal_code: '郵便番号'
@@ -51,6 +55,8 @@ ja:
         work_address_city: '市区町村'
         work_address_address1: '町域、番地等'
         work_address_address2: '建物名、部屋番号'
+        work_address_phones_1: '勤務先電話番号（１）'
+        work_address_phones_2: '勤務先電話番号（２）'
       new:
         title: '顧客の新規登録'
         basic_info: '基本情報'
