--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -115,6 +115,7 @@ ja:
       staff/login_form: 職員ログインフォーム
       staff/change_password_form: 職員パスワード変更フォーム
       admin/login_form: 管理者ログインフォーム
+      customer/login_form: 顧客ログインフォーム
 
     attributes:
       staff/login_form:
@@ -125,5 +126,8 @@ ja:
         new_password: 新しいパスワード
         new_password_confirmation: 新しいパスワード（確認）
       admin/login_form:
+        email: メールアドレス
+        password: パスワード
+      customer/login_form:
         email: メールアドレス
         password: パスワード
