--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -16,6 +16,7 @@ ja:
         submit: '検索'
     sessions:
       new:
+        title: 'ログイン'
         submit: 'ログイン'
     top:
       index:
@@ -105,6 +106,7 @@ ja:
         logout: 'ログアウト'
     sessions:
       new:
+        title: 'ログイン'
         submit: 'ログイン'
     top:
       index:
@@ -144,3 +146,13 @@ ja:
           type: '種別'
           date_time: '日時'
           contents_not_record: '記録がありません'
+
+  customer:
+    shared:
+      header:
+        login: 'Login'
+        logout: 'Logout'
+    sessions:
+      new:
+        title: 'ログイン'
+        submit: 'ログイン'
