プログラムの新規登録と更新 #26

--- a/config/locales/controllers/ja.yml
+++ b/config/locales/controllers/ja.yml
@@ -31,6 +31,13 @@ ja:
         flash_alert: '入力に誤りがあります。'
       destroy:
         flash_notice: '顧客をアカウントを削除しました。'
+    programs:
+      create:
+        flash_notice: 'プログラムを登録しました。'
+        flash_alert: '入力に誤りがあります。'
+      update:
+        flash_notice: 'プログラムを更新しました。'
+        flash_alert: '入力に誤りがあります。'
   admin:
     base:
       authrize:
