--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -6,6 +6,7 @@ ja:
       staff_event: 職員イベント
       customer: 顧客
       address: 住所
+      program: プログラム
 
     attributes:
       administrator:
@@ -87,6 +88,19 @@ ja:
         primary: 優先
         last_four_digits: 電話番号下４桁
 
+      program:
+        title: タイトル
+        description: 詳細
+        application_start_time: 申し込み開始日時
+        application_start_date: 申し込み開始日
+        application_end_time: 申し込み終了日時
+        application_end_date: 申し込み終了日
+        min_number_of_participants: 最小参加者数
+        max_number_of_participants: 最大参加者数
+        applicants: 応募者
+        entries: エントリー
+        registrant: 登録者
+
     errors:
       models:
         staff_member:
@@ -101,7 +115,6 @@ ja:
                 before: には1年後の日付より前の日付を指定してください。
                 after: には開始日より後の日付を指定してください。
                 after: には開始日より後の日付を指定してください。
-
         customer:
           attributes:
             email:
@@ -109,6 +122,17 @@ ja:
               birthday:
                 after_or_equal_to: には1900年1月1日以降の日時を指定してください。
                 before: が未来の日付です。
+        program:
+          attributes:
+            applicatin_start_time:
+              after_or_equal_to: には2000年1月1日以降の日付を指定してください。
+              before: には現在から1年後までの日時を指定してください。
+            application_end_time:
+              after_or_equl_to: には2000年1月1日以降の日付を指定してください。
+              before: には申し込み開始日時から90日以内の日時を指定してください。
+              after: には申し込み開始日時よりも後の日時を指定してください。
+            max_number_of_participants:
+              less_than_min_number: には最小参加者以上の数を指定してください。
 
   activemodel:
     models:
