--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -140,6 +140,10 @@ ja:
         program_end_instruction: '開始日時から90日後まで'
         program_min_entry: '最小参加者数'
         program_max_entry: '最大参観者数'
+      entries_form:
+        name: '氏名'
+        a: 'A'
+        c: 'C'
 
   admin:
     shared:
