--- a/config/locales/controllers/ja.yml
+++ b/config/locales/controllers/ja.yml
@@ -40,6 +40,7 @@ ja:
         flash_alert: '入力に誤りがあります。'
       destroy:
         flash_notice: 'プログラムを削除しました。'
+        flash_alert: 'このプログラムは削除できません。'
       entries:
         flash_notice: 'プログラム申し込みのフラグを更新しました。'
   admin:
