申込みを受け付ける #25

--- a/config/locales/controllers/ja.yml
+++ b/config/locales/controllers/ja.yml
@@ -66,3 +66,7 @@ ja:
     base:
       authrize:
         flash_alert: 'ログインしてください。'
+    entries:
+      create:
+        flash_notice: 'プログラムに申し込みました。'
+        flash_alert: 'プログラムへの申込者数が上限に達しました。'
