--- a/config/locales/controllers/ja.yml
+++ b/config/locales/controllers/ja.yml
@@ -71,3 +71,5 @@ ja:
         flash_notice: 'プログラムに申し込みました。'
         flash_alert: 'プログラムへの申込者数が上限に達しました。'
         flash_alert_close: 'プログラムの申し込み期限が終了しました。'
+      cancel:
+        flash_notice: 'プログラムへの申込みをキャンセルしました。'
