顧客トップページの修正 #24

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -211,6 +211,7 @@ ja:
       header:
         login: 'ログイン'
         logout: 'ログアウト'
+        account: 'アカウント'
     sessions:
       new:
         title: 'ログイン'
