--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -244,3 +244,33 @@ ja:
         closed: '募集終了'
         apply: '申し込む'
         confirm: '本当に申し込みますか？'
+    accounts:
+      show:
+        title: '顧客詳細情報'
+        basic_info: '基本情報'
+        home_address: '自宅住所'
+        work_address: '勤務先'
+        full_name: '氏名'
+        full_name_kana: 'フリガナ'
+        birthday: '生年月日'
+        gender: '性別'
+        create_at: '登録日時'
+        update_at: '更新日時'
+        personal_phones_1: '個人電話番号（１）'
+        personal_phones_2: '個人電話番号（２）'
+        home_address_postal_code: '郵便番号'
+        home_address_prefecture: '都道府県'
+        home_address_city: '市区町村'
+        home_address_address1: '町域、番地等'
+        home_address_address2: '建物名、部屋番号'
+        home_address_phones_1: '自宅電話番号（１）'
+        home_address_phones_2: '自宅電話番号（２）'
+        work_address_company_name: '会社名'
+        work_address_division_name: '部署名'
+        work_address_postal_code: '郵便番号'
+        work_address_prefecture: '都道府県'
+        work_address_city: '市区町村'
+        work_address_address1: '町域、番地等'
+        work_address_address2: '建物名、部屋番号'
+        work_address_phones_1: '勤務先電話番号（１）'
+        work_address_phones_2: '勤務先電話番号（２）'
