確認画面の仮実装 #24

--- a/config/locales/controllers/ja.yml
+++ b/config/locales/controllers/ja.yml
@@ -77,3 +77,5 @@ ja:
       update:
         flash_notice: 'アカウント情報を更新しました。'
         flash_alert: '入力に誤りがあります。'
+      confirm:
+        flash_alert: '入力に誤りがあります。'
