--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -280,3 +280,8 @@ ja:
         confirm: '確認画面へ進む'
         update: '更新'
         cancel: 'キャンセル'
+      confirm:
+        title: 'アカウントの更新（確認）'
+        confirm_message: '以下の内容でアカウントを更新します。よろしいですか？'
+        update: '更新'
+        correct: '訂正'
