--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -297,3 +297,8 @@ ja:
         title: '新規問い合わせ'
         submit: '確認画面へ進む'
         cancel: 'キャンセル'
+      confirm:
+        title: 'アカウントの更新（確認）'
+        confirm_message: '以下の内容でアカウントを更新します。よろしいですか？'
+        update: '更新'
+        correct: '訂正'
