--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -300,5 +300,5 @@ ja:
       confirm:
         title: 'アカウントの更新（確認）'
         confirm_message: '以下の内容でアカウントを更新します。よろしいですか？'
-        update: '更新'
+        update: '送信'
         correct: '訂正'
