--- a/config/locales/controllers/ja.yml
+++ b/config/locales/controllers/ja.yml
@@ -46,9 +46,12 @@ ja:
     messages:
       destroy:
         flash_notice: '問い合わせを削除しました。'
-    replieds:
+    replies:
       confirm:
         flash_notice: '入力に誤りがあります。'
+      create:
+        flash_notice: '問い合わせに返信しました。'
+        flash_alert: '入力に誤りがあります。'
 
   admin:
     base:
