--- a/config/locales/controllers/ja.yml
+++ b/config/locales/controllers/ja.yml
@@ -95,4 +95,6 @@ ja:
       create:
         flash_notice: '問い合わせを送信しました。'
         flash_alert: '入力に誤りがあります。'
+      destroy:
+        flash_notice: 'メッセージを削除しました。'
 
