test(WIP):E2Eテスト

--- a/docs/ユースケース.md
+++ b/docs/ユースケース.md
@@ -110,11 +110,11 @@
 | 代替フロー | - 参加者なし: 参加者がいない旨のメッセージを表示 |
 | 事後条件 | 参加者のステータスが更新される |
 
-### 3.4. メッセージング
+### 3.4. 問い合わせ
 
 | ユースケースID | S-010 |
 | ------------- | ----- |
-| ユースケース名 | 顧客へのメッセージ送信 |
+| ユースケース名 | 顧客への問い合わせ送信 |
 | アクター | スタッフ |
 | 説明 | スタッフが顧客にメッセージを送信する |
 | 事前条件 | スタッフがログイン済み、顧客が登録済み |
@@ -124,7 +124,7 @@
 
 | ユースケースID | S-011 |
 | ------------- | ----- |
-| ユースケース名 | 顧客からのメッセージ確認 |
+| ユースケース名 | 顧客からの問い合わせ確認 |
 | アクター | スタッフ |
 | 説明 | スタッフが顧客からのメッセージを確認する |
 | 事前条件 | スタッフがログイン済み、顧客からメッセージが送信済み |
@@ -134,7 +134,7 @@
 
 | ユースケースID | S-012 |
 | ------------- | ----- |
-| ユースケース名 | メッセージ返信 |
+| ユースケース名 | 問い合わせ返信 |
 | アクター | スタッフ |
 | 説明 | スタッフが顧客のメッセージに返信する |
 | 事前条件 | スタッフがログイン済み、顧客からメッセージが送信済み |
@@ -222,7 +222,7 @@
 
 | ユースケースID | C-008 |
 | ------------- | ----- |
-| ユースケース名 | スタッフへのメッセージ送信 |
+| ユースケース名 | スタッフへの問い合わせ送信 |
 | アクター | 顧客 |
 | 説明 | 顧客がスタッフにメッセージを送信する |
 | 事前条件 | 顧客がログイン済み |
@@ -232,7 +232,7 @@
 
 | ユースケースID | C-009 |
 | ------------- | ----- |
-| ユースケース名 | メッセージ履歴確認 |
+| ユースケース名 | 問い合わせ履歴確認 |
 | アクター | 顧客 |
 | 説明 | 顧客が過去のメッセージのやり取りを確認する |
 | 事前条件 | 顧客がログイン済み、メッセージのやり取りが存在する |
@@ -405,9 +405,9 @@ rectangle "スタッフのユースケース" {
   usecase "プログラム作成" as S007
   usecase "プログラム更新" as S008
   usecase "プログラム参加者管理" as S009
-  usecase "顧客へのメッセージ送信" as S010
-  usecase "顧客からのメッセージ確認" as S011
-  usecase "メッセージ返信" as S012
+  usecase "顧客への問い合わせ送信" as S010
+  usecase "顧客からの問い合わせ確認" as S011
+  usecase "問い合わせ返信" as S012
 }
 
 rectangle "顧客のユースケース" {
@@ -418,8 +418,8 @@ rectangle "顧客のユースケース" {
   usecase "プログラム閲覧" as C005
   usecase "プログラム予約" as C006
   usecase "予約キャンセル" as C007
-  usecase "スタッフへのメッセージ送信" as C008
-  usecase "メッセージ履歴確認" as C009
+  usecase "スタッフへの問い合わせ送信" as C008
+  usecase "問い合わせ履歴確認" as C009
 }
 
 rectangle "管理者のユースケース" {
