test(WIP):E2Eテスト

--- a/docs/ユースケース.md
+++ b/docs/ユースケース.md
@@ -218,7 +218,7 @@
 | 代替フロー | - キャンセル期限超過: キャンセルできない旨のメッセージを表示 |
 | 事後条件 | 予約がキャンセルされる |
 
-### 4.3. メッセージング
+### 4.3. 問い合わせ
 
 | ユースケースID | C-008 |
 | ------------- | ----- |
@@ -239,6 +239,17 @@
 | 基本フロー | 1. マイページのメッセージ履歴にアクセス<br>2. メッセージスレッドを選択<br>3. やり取りの履歴を確認 |
 | 代替フロー | - メッセージなし: メッセージがない旨のメッセージを表示 |
 | 事後条件 | メッセージ履歴が表示される |
+
+| ユースケースID | C-010                                             |
+| ------------- |---------------------------------------------------|
+| ユースケース名 | 問い合わせ返信                                           |
+| アクター | 顧客                                                |
+| 説明 | 顧客がスタッフのメッセージに返信する                                |
+| 事前条件 | 顧客がログイン済み、スタッフからメッセージが送信済み                        |
+| 基本フロー | 1. マイページのメッセージ履歴にアクセス<br>2. メッセージスレッドを選択<br>3. 返信 |
+| 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す                  |
+| 事後条件 | 返信がスタッフに送信される                                     |
+
 
 ## 5. 管理者のユースケース
 
