--- a/config/locales/controllers/ja.yml
+++ b/config/locales/controllers/ja.yml
@@ -30,7 +30,7 @@ ja:
         flash_notice: '顧客を更新しました。'
         flash_alert: '入力に誤りがあります。'
       destroy:
-        flash_notice: '顧客をアカウントを削除しました。'
+        flash_notice: '顧客アカウントを削除しました。'
     programs:
       create:
         flash_notice: 'プログラムを登録しました。'
